k8s/ingress/exampleserviceforingress.yml
apiVersion: v1
kind: Service
metadata:
  name: exampleservicenginx
spec:
  selector:
    example: deploymentfornginx
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: exampleservicehttpd
spec:
  selector:
    example: deploymentforhttpd
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
