k8s/ingress/examplesingleingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: examplesinglegress
  annotations:
    Kubernetes.io/ingress.class: traefik
spec:
  backend:
    serviceName: exampleservicehttpd
    servicePort: 8081
